Provides JWT authorization
